Fix spacing regressions on dataset page.

--- a/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
@@ -135,10 +135,21 @@
     line-height: 10px;
     padding: 0;
     color: #424242;
-    padding-bottom: 1em;
-    border-bottom: 1px solid;
-    border-bottom-color: #eee;
+    padding-top: 1em;
+    border-top: 1px solid;
+    border-top-color: #eee;
     text-transform: uppercase;
     font-weight: bold;
+  }
+}
+
+.cte-display {
+  ul {
+    @extend .list-group;
+    li {
+      @extend .list-group-item;
+      display: inline-block;
+      width: 100%;
+    }
   }
 }
